syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.mrray.blockchain.grpc.manager";
option java_outer_classname = "SdkManagerProto";
package manager;




message SdkManagerReply {
    int32 code = 1;
    string message = 2;
    string payload = 3;
}

message SdkManagerRequest {
    string payload = 1;
}

service SdkManagerService {
  rpc sendTradingModel (SdkManagerRequest) returns ( SdkManagerReply) {}
  rpc getAllInfo(SdkManagerRequest) returns ( SdkManagerReply) {};
  rpc AuthenticationSF(SdkManagerRequest) returns ( SdkManagerReply) {};
}

